# cascade-cli

./: .gitignore  AUTHENTICATION.md  CLAUDE.md  Cargo.toml  EDIT_FLOWS_INTEGRATION.md  MANUAL_TAP_SETUP.md  PRODUCTION_CHECKLIST.md  README.md  RECOVERY_GUIDE.md  UPCOMING.md  install.ps1  install.sh  tls_analysis.md
.cursor/rules/: architecture-patterns.mdc  ci-compatibility.mdc  development-workflow.mdc  hooks-and-completions.mdc  professional-output.mdc  project-structure.mdc  testing-strategy.mdc
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  test.yml  update-homebrew-tap.yml
chocolatey/: cascade-cli.nuspec
chocolatey/tools/: chocolateyinstall.ps1
completions/: _cc  cc.bash  cc.fish
docs/: ARCHITECTURE.md  BITBUCKET_INTEGRATION.md  DEVELOPMENT.md  EDIT_FLOWS_INTEGRATION.md  HOMEBREW_TAP_SETUP.md  HOOKS.md  INSTALLATION.md  ONBOARDING.md  RELEASING.md  SCRIPTS.md  TROUBLESHOOTING.md  UPCOMING.md  USER_MANUAL.md  WORKFLOWS.md
homebrew/: README.md  cascade-cli.rb
scripts/: bump-version.sh  ci-simulation.sh  debug-integration-tests.sh  docker-ci-simulation.sh  generate-completions.sh  manual-tap-setup.sh  pre-push-check.sh  setup-homebrew-tap.sh  sync-homebrew-formula.sh
snap/: snapcraft.yaml
src/: errors.rs  lib.rs  main.rs  utils.rs
src/bitbucket/: client.rs  integration.rs  mod.rs  pull_request.rs
src/cli/: mod.rs  output.rs
src/cli/commands/: cleanup.rs  completions.rs  config.rs  conflicts.rs  diagnose.rs  doctor.rs  entry.rs  hooks.rs  init.rs  mod.rs  setup.rs  stack.rs  status.rs  tui.rs  version.rs  viz.rs
src/config/: auth.rs  mod.rs  settings.rs
src/git/: branch_manager.rs  conflict_analysis.rs  mod.rs  repository.rs
src/providers/: factory.rs  integration.rs  mod.rs  types.rs
src/providers/bitbucket/: mod.rs
src/server/: mod.rs
src/stack/: cleanup.rs  manager.rs  metadata.rs  mod.rs  rebase.rs  stack.rs  sync_state.rs
src/utils/: platform.rs  spinner.rs
tests/: integration_tests.rs  rebase_conflict_recovery_tests.rs  rebase_safety_tests.rs  rebase_safety_tests_simple.rs  sync_command_tests.rs  sync_continue_abort_tests.rs
tests/integration/: amend_tests.rs  bitbucket_api_tests.rs  branch_deletion_safety_tests.rs  checkout_safety_tests.rs  config_management_tests.rs  end_to_end_tests.rs  force_push_safety_tests.rs  hook_content_tests.rs  multi_stack_tests.rs  network_failure_tests.rs  platform_tests.rs  squash_and_push_tests.rs  test_helpers.rs
