[package]
name = "cascade-cli"
version = "0.1.0"
edition = "2021"
description = "Stacked diffs CLI for Bitbucket Server"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "cc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
git2 = "0.18"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
config = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"