[package]
name = "cascade-cli"
version = "0.1.0"
edition = "2021"
description = "Stacked diffs CLI for Bitbucket Server"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "cc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
dialoguer = "0.11"
indicatif = "0.17"
ratatui = "0.25"
crossterm = "0.27"
git2 = "0.18"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
config = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"
base64 = "0.21"
url = "2.4"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"