[package]
name = "cascade-cli"
version = "0.1.65"
edition = "2021"
description = "Stacked diffs CLI for Bitbucket Server"
authors = ["Jared Manfredi <jared@jaredm.dev>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/JAManfredi/cascade-cli"
repository = "https://github.com/JAManfredi/cascade-cli"
documentation = "https://docs.rs/cascade-cli"
keywords = ["git", "bitbucket", "stacked-diffs", "cli", "development"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.82.0"

[[bin]]
name = "ca"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
dialoguer = "0.11"
indicatif = "0.17"
ratatui = "0.29"  # Update to avoid unmaintained paste dependency
crossterm = "0.27"
git2 = { version = "0.20.2", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "https", "ssh"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
config = "0.14"
console = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3.20"  # Security: Fix RUSTSEC-2025-0055 (ANSI escape sequences)
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"
base64 = "0.21"
url = "2.4"
sha2 = "0.10"
open = "5.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
mockito = "1.0"
serde_json = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2.3.0"
serial_test = "3.0"

# Disabled until API compatibility issues are resolved
# [[test]]
# name = "rebase_safety_tests"
# path = "tests/rebase_safety_tests.rs"

[[test]]
name = "sync_command_tests"
path = "tests/sync_command_tests.rs"

[[test]]
name = "rebase_conflict_recovery_tests"
path = "tests/rebase_conflict_recovery_tests.rs"

[[test]]
name = "rebase_safety_tests_simple"
path = "tests/rebase_safety_tests_simple.rs"
